--- a/da_mydata.ipynb
+++ b/da_mydata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,17 +10,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df_sang = pd.read_csv('./data2/부산광역시_상권_집객시설정보_20211216_수정.csv', encoding='cp949')"
+    "## 상권 정보 - 집객시설"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_af = pd.read_csv('./data2/부산광역시_상권_집객시설정보_20211216_수정.csv', encoding='cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -150,27 +157,54 @@
        "쇼핑시설수            0           0         0         0          0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_sang.head(5).T"
+    "df_af.head(5).T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(384, 10)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_af.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 상권 정보 - 변화지표"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_sb = pd.read_csv('./data2/부산광역시_상권_변화지표정보.csv', encoding='cp949')"
+    "df_sb = pd.read_csv('./data2/부산광역시_상권_변화지표정보_20211216_수정.csv', encoding='cp949')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +307,7 @@
        "부산평균폐업개월수     44        44         44    44      44"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,16 +318,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(477, 7)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_gong = pd.read_csv('./data2/부산시공공_주민등록인구_통계정보_서비스_수집일_20220701.csv', encoding='utf-8', sep='|')"
+    "df_sb.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 상권 정보 - 점포이력\n",
+    "- 전체 data는 27만 rows 인데 csv 파일로 사이트에서 직접 다운 받으면 5000 rows가 최대임.\n",
+    "- 그래서 API KEY 받아서 얻기."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 인구 정보 - 7월, 빅데이터포털"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- link : https://bigdata.busan.go.kr/data/bigDataDetailView.do?menuCode=M00000000007\n",
+    "- 근데 이건 인구 데이터가 2020년 11월까지만 있고, 그 이후에 업데이트는 안 되는 듯.\n",
+    "- 문의 넣어놨음."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_gong7 = pd.read_csv('./data2/부산시공공_주민등록인구_통계정보_서비스_수집일_20220701.csv', encoding='utf-8', sep='|')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- skey : ??\n",
+    "- gugun : 구/군\n",
+    "- rate_year : ??\n",
+    "- dong_cnt : 동 수\n",
+    "- house_cnt : ?? (집 수?)\n",
+    "- top_pop_cnt : 총 인구 수\n",
+    "- m_pop_cnt : 총 남성 인구 수\n",
+    "- f_pop_cnt : 총 여성 인구 수\n",
+    "- pop_ratio : ?? (지역구 인구 수 / 부산 전체 인구 수?)\n",
+    "- pop_density : ?? (인구 밀도인데 얼마가 기준인지?)\n",
+    "- instt_code : 제공기관 코드\n",
+    "- last_load_dttm : ?? (마지막 갱신일자?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -455,13 +552,58 @@
        "last_load_dttm  2022-07-01 05:57:03  2022-07-01 05:57:03  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_gong.head(5).T"
+    "df_gong7.head(5).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(986, 12)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gong7.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2020-06', '2020-07', '2020-08', '2020-09', '2020-10', '2020-11',\n",
+       "       '2015', '2016', '2017', '2007', '2008', '2009', '2010', '2011',\n",
+       "       '2012', '2013', '2014', '2020-03', '2020-04', '2020-05', '2018',\n",
+       "       '2019-02', '2019-03', '2019-04', '2019-05', '2019-06', '2019-07',\n",
+       "       '2019-08', '2019-09', '2019-10', '2019-01', '2019-11', '2019-12',\n",
+       "       '2020-01', '2020-02'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gong7.rate_year.unique()"
    ]
   }
  ],
