docs : Store History how to handle traffic

--- a/SangGwon.ipynb
+++ b/SangGwon.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,20 +256,21 @@
    "metadata": {},
    "source": [
     "# 상권 점포이력\n",
-    "- 트래픽 제한이 10000이라 279096 rows 어떻게 해야할지 ?"
+    "- 트래픽 제한이 10000이라 279096 rows 어떻게 해야할지 ?\n",
+    "  - pageNo로 다 추출해서 한 df로 합치기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = 'http://apis.data.go.kr/6260000/BusanCommercialHistoryService/getCommercialHistoryList'\n",
     "serviceKey = 'sDfk9Qyuq5+oRZaD0XyZ+Zohtbmixn0X3VlBiZHMQAM5OBCSCn+ZTvqoiWBPXS+tZy4mMtWkIUnS6XSpfgJm2w=='\n",
-    "pageNo = '1'\n",
-    "numOfRows = '1000' # total : 279096 rows\n",
-    "result = 'json'\n",
+    "pageNo = '28'\n",
+    "numOfRows = '10000' # total : 279096 rows\n",
+    "resultType = 'json'\n",
     "\n",
     "# Store History\n",
     "df_sh = makeDF(url, serviceKey, pageNo, numOfRows, resultType)"
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -316,91 +317,91 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>영업/정상</td>\n",
-       "      <td>통독상회 4호점</td>\n",
-       "      <td>외식</td>\n",
-       "      <td>호프·간이주점</td>\n",
-       "      <td>기타 주점업</td>\n",
-       "      <td>부산광역시 강서구 명지국제7로 111, 상가동 101호 (명지동, LH오션타운)</td>\n",
-       "      <td>2020-06-02</td>\n",
+       "      <td>하나약국</td>\n",
+       "      <td>소매</td>\n",
+       "      <td>약국</td>\n",
+       "      <td>의약품 소매업</td>\n",
+       "      <td>부산광역시 부산진구 복지로 77 (개금동)</td>\n",
+       "      <td>2016-12-19</td>\n",
        "      <td></td>\n",
-       "      <td>POINT(128.913796013936 35.0974001866424)</td>\n",
+       "      <td>POINT(129.020842415753 35.1491324007954)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>영업/정상</td>\n",
-       "      <td>린푸드</td>\n",
-       "      <td>외식</td>\n",
-       "      <td>한식음식점</td>\n",
-       "      <td>한식 일반 음식점업</td>\n",
-       "      <td>부산광역시 강서구 명지국제12로 43-3, 1층 일부 (명지동)</td>\n",
-       "      <td>2020-06-02</td>\n",
+       "      <td>미소약국</td>\n",
+       "      <td>소매</td>\n",
+       "      <td>약국</td>\n",
+       "      <td>의약품 소매업</td>\n",
+       "      <td>부산광역시 부산진구 복지로 65 (개금동)</td>\n",
+       "      <td>2015-03-23</td>\n",
        "      <td></td>\n",
-       "      <td>POINT(128.92562878084 35.1048547530175)</td>\n",
+       "      <td>POINT(129.020300764168 35.147383629014)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>영업/정상</td>\n",
-       "      <td>국제통닭 명지점</td>\n",
-       "      <td>외식</td>\n",
-       "      <td>호프·간이주점</td>\n",
-       "      <td>기타 주점업</td>\n",
-       "      <td>부산광역시 강서구 명지국제5로 142, A동 1층 일부 (명지동)</td>\n",
-       "      <td>2020-06-02</td>\n",
+       "      <td>영생약국</td>\n",
+       "      <td>소매</td>\n",
+       "      <td>약국</td>\n",
+       "      <td>의약품 소매업</td>\n",
+       "      <td>부산광역시 부산진구 백양관문로77번길 42, 2층 209호 (개금동, 동원화인패밀리타운)</td>\n",
+       "      <td>2015-10-02</td>\n",
        "      <td></td>\n",
-       "      <td>POINT(128.921535160743 35.1065079390958)</td>\n",
+       "      <td>POINT(129.028619895641 35.1636038893554)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>영업/정상</td>\n",
-       "      <td>쿠시타케</td>\n",
-       "      <td>외식</td>\n",
-       "      <td>일식음식점</td>\n",
-       "      <td>일식 음식점업</td>\n",
-       "      <td>부산광역시 강서구 명지국제12로 10, 운정D1타워 101호 (명지동)</td>\n",
-       "      <td>2020-06-01</td>\n",
+       "      <td>새대학약국</td>\n",
+       "      <td>소매</td>\n",
+       "      <td>약국</td>\n",
+       "      <td>의약품 소매업</td>\n",
+       "      <td>부산광역시 부산진구 복지로 77-1 (개금동)</td>\n",
+       "      <td>2015-06-04</td>\n",
        "      <td></td>\n",
-       "      <td>POINT(128.922123521706 35.1047460172475)</td>\n",
+       "      <td>POINT(129.020153206928 35.1463174758707)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>영업/정상</td>\n",
-       "      <td>거북이동네 부산명지점</td>\n",
-       "      <td>외식</td>\n",
-       "      <td>한식음식점</td>\n",
-       "      <td>한식 일반 음식점업</td>\n",
-       "      <td>부산광역시 강서구 명지국제6로 246, 예성빌딩 105,106,107호 (명지동)</td>\n",
-       "      <td>2020-05-25</td>\n",
+       "      <td>다정약국</td>\n",
+       "      <td>소매</td>\n",
+       "      <td>약국</td>\n",
+       "      <td>의약품 소매업</td>\n",
+       "      <td>부산광역시 부산진구 가야대로 470 (개금동)</td>\n",
+       "      <td>2015-05-22</td>\n",
        "      <td></td>\n",
-       "      <td>POINT(128.923232623953 35.0973588619081)</td>\n",
+       "      <td>POINT(129.023428436511 35.1528733775346)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  trdstatenm       bplcnm majornm  minornm    upjongnm  \\\n",
-       "0      영업/정상     통독상회 4호점      외식  호프·간이주점      기타 주점업   \n",
-       "1      영업/정상          린푸드      외식    한식음식점  한식 일반 음식점업   \n",
-       "2      영업/정상     국제통닭 명지점      외식  호프·간이주점      기타 주점업   \n",
-       "3      영업/정상         쿠시타케      외식    일식음식점     일식 음식점업   \n",
-       "4      영업/정상  거북이동네 부산명지점      외식    한식음식점  한식 일반 음식점업   \n",
+       "  trdstatenm bplcnm majornm minornm upjongnm  \\\n",
+       "0      영업/정상   하나약국      소매      약국  의약품 소매업   \n",
+       "1      영업/정상   미소약국      소매      약국  의약품 소매업   \n",
+       "2      영업/정상   영생약국      소매      약국  의약품 소매업   \n",
+       "3      영업/정상  새대학약국      소매      약국  의약품 소매업   \n",
+       "4      영업/정상   다정약국      소매      약국  의약품 소매업   \n",
        "\n",
-       "                                      rdnwhladdr  apvpermymd dcbymd  \\\n",
-       "0   부산광역시 강서구 명지국제7로 111, 상가동 101호 (명지동, LH오션타운)  2020-06-02          \n",
-       "1            부산광역시 강서구 명지국제12로 43-3, 1층 일부 (명지동)  2020-06-02          \n",
-       "2           부산광역시 강서구 명지국제5로 142, A동 1층 일부 (명지동)  2020-06-02          \n",
-       "3        부산광역시 강서구 명지국제12로 10, 운정D1타워 101호 (명지동)  2020-06-01          \n",
-       "4  부산광역시 강서구 명지국제6로 246, 예성빌딩 105,106,107호 (명지동)  2020-05-25          \n",
+       "                                          rdnwhladdr  apvpermymd dcbymd  \\\n",
+       "0                            부산광역시 부산진구 복지로 77 (개금동)  2016-12-19          \n",
+       "1                            부산광역시 부산진구 복지로 65 (개금동)  2015-03-23          \n",
+       "2  부산광역시 부산진구 백양관문로77번길 42, 2층 209호 (개금동, 동원화인패밀리타운)  2015-10-02          \n",
+       "3                          부산광역시 부산진구 복지로 77-1 (개금동)  2015-06-04          \n",
+       "4                          부산광역시 부산진구 가야대로 470 (개금동)  2015-05-22          \n",
        "\n",
        "                                       geom  \n",
-       "0  POINT(128.913796013936 35.0974001866424)  \n",
-       "1   POINT(128.92562878084 35.1048547530175)  \n",
-       "2  POINT(128.921535160743 35.1065079390958)  \n",
-       "3  POINT(128.922123521706 35.1047460172475)  \n",
-       "4  POINT(128.923232623953 35.0973588619081)  "
+       "0  POINT(129.020842415753 35.1491324007954)  \n",
+       "1   POINT(129.020300764168 35.147383629014)  \n",
+       "2  POINT(129.028619895641 35.1636038893554)  \n",
+       "3  POINT(129.020153206928 35.1463174758707)  \n",
+       "4  POINT(129.023428436511 35.1528733775346)  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
