feature: 지도시각화 이미지

--- a/SangGwon.ipynb
+++ b/SangGwon.ipynb
@@ -3408,6 +3408,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"./img/change_index_folium_visualization2.PNG\" width=\"100%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<!-- <img src=\"./img/change_index_folium_visualization.PNG\" width=100%> -->"
    ]
   },
